FEATURE - add post detail show page

--- a/app/assets/stylesheets/auth.css.scss
+++ b/app/assets/stylesheets/auth.css.scss
@@ -1,4 +1,4 @@
-.row#sign, .row#settings, .row#new-posts {
+.row#sign, .row#settings, .row#new-posts, .row#bbs-post {
   padding-top: 30px;
 
   .form-actions {
