--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -26,7 +26,7 @@
         %ul.nav.pull-right
           - if user_signed_in?
             = main_nav :settings, { class: 'dropdown' } do
-              = link_to '#', class: 'dropdown-toggle', data: { toggle: 'dropdown' } do
+              = link_to '#', class: 'dropdown-toggle image', data: { toggle: 'dropdown' } do
                 %img{:alt => "", "data-src" => "holder.js/30x30"}
                 = current_user.name
                 %b.caret
