FEATURES - user settings

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -30,6 +30,7 @@ section { padding-top: 0; }
   padding: 20px 15px;
   &.image { padding: 15px; }
   img { margin-right: 5px; }
+  b.caret { margin-top: 12px; }
 }
 
 .span3 {
