--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,7 +8,7 @@
 
       = simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { class: 'form-horizontal' } do |f|
         = f.input :name
-        = f.input :email
+        = f.input :email, validate: { uniqueness: true }
         = f.input :password
         = f.input :password_confirmation
 
