--- a/app/views/users/_profile.html.haml
+++ b/app/views/users/_profile.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { class: 'form-horizontal' } do |f|
+= simple_form_for resource, url: collection_path, validate: true, html: { class: 'form-horizontal', method: :put } do |f|
   = f.input :name
   = f.input :bio, as: :text, input_html: { rows: 5, class: 'span5' }
 
