--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -6,11 +6,14 @@
           新用户注册
           %small 只需要轻松输入信息，便可以成为吞迷
 
-      = simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { class: 'form-horizontal' } do |f|
+      = simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { class: 'form-horizontal', autocomplete: :off } do |f|
         = f.input :name
         = f.input :email, validate: { uniqueness: true }
-        = f.input :password
-        = f.input :password_confirmation
+        - if session[:omniauth]
+          = f.input :skip_password, as: :hidden, input_html: { value: true }
+        - else
+          = f.input :password
+          = f.input :password_confirmation
 
         .form-actions
           = f.button :submit, '提交帐户信息', class: 'btn btn-success btn-large'
