user settings and add alerts

--- a/app/views/bbs/home/index.html.haml
+++ b/app/views/bbs/home/index.html.haml
@@ -9,55 +9,36 @@
 .row
   .span9
     %section#bbs-boards
-      .page-header
-        %h1
-          %i.icon-list
-          吞食天地2ND
-          %small 吞食天地2ND主板块信息，论坛板块信息，大家都想一下方案如何写
-      %ul.thumbnails
-        - 3.times do
-          %li
-            .thumbnail
-              = link_to '#' do
-                %img{:alt => "", "data-src" => "holder.js/300x174"}
-              .caption
-                %h3= link_to '吞食天地2nd Evolution 进化', bbs_board_path(Board.children.first)
-                %p.desc 在本作中玩家扮演刘备，从第一章“黄巾之乱”开始，一直到最后篡改历史一统天下，总共分为八章。
-                %ul.state_bar.clearfix
-                  %li
-                    话题：
-                    %span 200个
-                  %li.divider-vertical
-                  %li
-                    精华：
-                    %span 10个
-                  %li.divider-vertical
-                  %li
-                    回复：
-                    %span 29001个
-                  %li= link_to t('views.layout.topic_detail').html_safe, '#'
+      .board
+        - @main_boards.each do |root|
+          .page-header
+            %h1
+              %i.icon-list
+              = root.name
+              %small= root.description
+          %ul.thumbnails
+            - root.children.each do |child|
+              %li
+                .thumbnail
+                  = link_to bbs_board_path(child) do
+                    %img{:alt => "", "data-src" => "holder.js/300x150"}
+                  .caption
+                    %h3= link_to child.name, bbs_board_path(child)
+                    %p.desc= child.description
+                    %ul.state_bar.clearfix
+                      %li
+                        话题：
+                        %span= child.bbs_topics_count
+                        个
+                      %li.divider-vertical
+                      %li
+                        精华：
+                        %span= child.bbs_posts.recommend.count 
+                        个
+                      %li.divider-vertical
+                      %li
+                        回复：
+                        %span= child.total_replies_count
+                        个
+                      %li= link_to t('views.layout.topic_detail').html_safe, bbs_board_path(child)
   = render 'sidebar'
-
-/ #recommended_wrap
-
-/ #forum-wrap
-/   - @main_boards.each do |board|
-/     .forum
-/       .forum-header.group
-/         %h2
-/           主板块：
-/           = board.name
-/         %p xxxxxx
-/       .forum-list
-/         %p.notice 本板块的最新消息，我们马上要出最新的版本了。希望大家踊跃参与。
-/         - board.children.each do |child|
-/           .child-board.group
-/             .head_img= image_tag('examples/02.jpg')
-/             %h3= link_to child.name, bbs_board_path(child)
-/             %p.description= child.description
-/             %p
-/               %span.admin
-/                 版主：
-/                 = link_to '西唯', '#'
-/               %span.topics
-/                 总帖数/精华帖：0 / 0
