--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,7 @@
   %body{ :"data-spy" => 'scroll', :"data-target" => '.bs-docs-sidebar' }
 
     = render 'header'
+    = render 'alert'
     = yield :jumbotron
 
     .container
