MISC - fix bug for bbs post count

--- a/app/views/bbs/home/index.html.haml
+++ b/app/views/bbs/home/index.html.haml
@@ -28,7 +28,7 @@
                     %ul.state_bar.clearfix
                       %li
                         话题：
-                        %span= child.bbs_topics_count
+                        %span= child.bbs_posts_count
                         个
                       %li.divider-vertical
                       %li
