--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,10 +1,6 @@
 .row#settings
   .span9
-    .section
-      .page-header
-        %h1
-          用户信息设置
-          %small 这里需要添加一些文案，大家使劲想
+    %section
       = render '/application/tabs/settings'
       = render params[:type]
   .span3
