--- a/app/views/application/sidebars/_auth.html.haml
+++ b/app/views/application/sidebars/_auth.html.haml
@@ -13,6 +13,6 @@
   .box.no-border
     .page-header
       %h1 第三方账户登录
-    %ul.auth
-      %li= link_to image_tag('weibo-login-btn-medium.png'), '/users/auth/weibo'
-      %li= link_to image_tag('qq-login-btn-medium.png'), '#'
+    %ul.social-connections
+      - User.omniauth_providers.each do |provider|
+        %li= link_to provider, "/users/auth/#{provider}", class: provider
