--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,10 +1,6 @@
 .row#settings
   .span9
-    .section
-      .page-header
-        %h1
-          用户信息设置
-          %small 这里需要添加一些文案，大家使劲想
+    %section
       = render '/application/tabs/settings'
 
       = simple_form_for resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { method: :put, class: 'form-horizontal' } do |f|
