--- a/app/views/home/_social.html.haml
+++ b/app/views/home/_social.html.haml
@@ -1,9 +1,14 @@
 .bs-docs-social
   .container
-    %ul.bs-docs-social-buttons
-      %li= link_to image_tag('weibo-login-btn-medium.png'), '#', class: 'auth'
-      %li
-        <wb:follow-button uid="2991975565" type="red_2" width="136" height="24" ></wb:follow-button>
-      %li= link_to image_tag('qq-login-btn-medium.png'), '#', class: 'auth'
-      %li
-        <iframe src="http://follow.v.t.qq.com/index.php?c=follow&a=quick&name=jerryshen&style=4&t=1357190078065&f=1" marginwidth="0" marginheight="0" allowtransparency="true" frameborder="0" height="27" scrolling="auto" width="182"></iframe>
+    .row 
+      .span8
+        %p 这里需要一些文案啦。。。。大家多努力想想啊。。。不然不知道放什么啊。。。
+        %p 马上成为正版吞迷
+      .span4.clearfix
+        - if user_signed_in?
+          = link_to t('views.layout.my_profile').html_safe, '#', class: 'btn btn-large'
+        - else
+          %h3 用以下帐号登录：
+          %ul.social-connections
+            - User.omniauth_providers.each do |provider|
+              %li= link_to provider, "/users/auth/#{provider}", class: provider
