--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -31,7 +31,8 @@
                 = current_user.name
                 %b.caret
               %ul.dropdown-menu
-                %li= link_to '个人设置', settings_path(type: :profile)
+                %li= link_to '我的吞食天地', user_path(uid: current_user.uid)
+                %li= link_to '个人资料', settings_path(type: :profile)
                 %li= link_to '消息设置', settings_path(type: :notifications)
                 %li= link_to '修改密码', edit_user_registration_path
                 %li.divider
