--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,10 +8,11 @@
           .head-line
             %h1
               = current_user.name
-              的吞食天地
-            %p
-              = l current_user.confirmed_at, format: :cool
-              加入吞迷
+              的吞食天地          
+            %ul.nav.nav-pills
+              %li.active= link_to '我的话题', '#'
+              %li= link_to '我的收藏', '#'
+              %li= link_to '我的关注', '#'
         .span4
           - if resource == current_user
             %p
@@ -32,4 +33,7 @@
     .container
       .row 
         .span12
-          %p 这家伙在社区里面很懒，从没发布或者参与过话题
+          - if resource.bbs_posts.empty?
+            %p 这家伙在社区里面很懒，从没发布或者参与过话题
+          - else
+            asdf
