fix bug for post new page routes

--- a/app/views/bbs/posts/new.html.haml
+++ b/app/views/bbs/posts/new.html.haml
@@ -12,7 +12,7 @@
           = link_to parent.parent.name, bbs_root_path
           %span.divider /
         %li
-          = link_to parent.name, bbs_board_path(parent)
+          = link_to parent.name, bbs_board_posts_path(parent)
           %span.divider /
         %li
           发布新话题
