--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -35,7 +35,7 @@
               %h3= link_to '吞食天地2nd Evolution 进化', '#'
               %p.desc 在本作中玩家扮演刘备，从第一章“黄巾之乱”开始，一直到最后篡改历史一统天下，总共分为八章。战斗过程除了普通攻击之外还有总攻击 和策略选项，体现了一定的战术性。
               %ul.state_bar.clearfix
-                %li.clearfix
+                %li.rate.clearfix
                   推荐指数：
                   .raty{ data: { rate: 3 } }
                 %li
