--- a/app/assets/stylesheets/bbs.css.scss
+++ b/app/assets/stylesheets/bbs.css.scss
@@ -42,6 +42,7 @@ ul.state-bar {
     border-radius: 15px 15px 15px 15px;
     display: inline-block;
     padding: 5px 14px;
+    font-size: 12px;
 
     &:hover {
       background-color: #F5F5F5;
@@ -179,4 +180,8 @@ a.add-post-btn {
   &:hover {
     background-image: image-url("add-post-btn-hover.png")
   }
+}
+
+.post-body {
+  margin-bottom: 20px;
 }
