--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,7 +10,7 @@
               = current_user.name
               的吞食天地          
             %ul.nav.nav-pills
-              %li.active= link_to '我的话题', '#'
+              %li.active= link_to '我发起的话题', '#'
               %li= link_to '我参与的话题', '#'
               %li= link_to '我的收藏', '#'
               %li= link_to '我的关注', '#'
